day3 配置log